--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,24 +4,24 @@ set(PLFIT_CORE_SRCS error.c gss.c kolmogorov.c lbfgs.c mt.c platform.c plfit.c o
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
-add_library(plfit0 ${PLFIT_CORE_SRCS})
+ADD_LIBRARY(plfit0 ${PLFIT_CORE_SRCS})
 
-add_executable(plfit main.c getopt.c)
-target_link_libraries(plfit plfit0 ${MATH_LIBRARY})
-install(TARGETS plfit RUNTIME DESTINATION bin)
+#add_executable(plfit main.c getopt.c)
+#target_link_libraries(plfit plfit0 ${MATH_LIBRARY})
+#install(TARGETS plfit RUNTIME DESTINATION bin)
 
-add_executable(plgen plgen.c getopt.c)
-target_link_libraries(plgen plfit0 ${MATH_LIBRARY})
-install(TARGETS plgen RUNTIME DESTINATION bin)
+#add_executable(plgen plgen.c getopt.c)
+#target_link_libraries(plgen plfit0 ${MATH_LIBRARY})
+#install(TARGETS plgen RUNTIME DESTINATION bin)
 
-if(PLFIT_COMPILE_PYTHON_MODULE)
-    # Check whether we have SWIG and the Python libraries installed
-	find_package(SWIG REQUIRED)
-	include(${SWIG_USE_FILE})
-	find_package(PythonLibs REQUIRED)
-	include_directories(${PYTHON_INCLUDE_PATH})
+#if(PLFIT_COMPILE_PYTHON_MODULE)
+    ## Check whether we have SWIG and the Python libraries installed
+	#find_package(SWIG REQUIRED)
+	#include(${SWIG_USE_FILE})
+	#find_package(PythonLibs REQUIRED)
+	#include_directories(${PYTHON_INCLUDE_PATH})
 
-	set(CMAKE_SWIG_FLAGS "")
-	swig_add_module(plfit python plfit.i ${PLFIT_CORE_SRCS})
-	swig_link_libraries(plfit m ${PYTHON_LIBRARIES})
-endif(PLFIT_COMPILE_PYTHON_MODULE)
+	#set(CMAKE_SWIG_FLAGS "")
+	#swig_add_module(plfit python plfit.i ${PLFIT_CORE_SRCS})
+	#swig_link_libraries(plfit m ${PYTHON_LIBRARIES})
+#endif(PLFIT_COMPILE_PYTHON_MODULE)
